Add litphoto github url

--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 =	LITPI - LIGHTWEIGHT PHP FRAMEWORK
 ===================================================
 
-Demo website: http://www.litpi.com/litphoto
+Demo website: http://www.litpi.com/litphoto (Github sourcecode: http://github.com/voduytuan/litphoto)
 Version: 1.0
 Developer: Vo Duy Tuan <tuanmaster2002@yahoo.com>
 Published: 20/07/2012
